--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-#VITE_API_BASE_URL=http://127.0.0.1:5001/cftl-lms/us-central1/api
-VITE_API_BASE_URL=https://api-3hp3lhmala-uc.a.run.app
+VITE_API_BASE_URL=http://127.0.0.1:5001/cftl-lms/us-central1/api
+#VITE_API_BASE_URL=https://api-3hp3lhmala-uc.a.run.app
